Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33442

REPAIR TABLE corrupts UUIDs

    XMLWordPrintable

Details

    Description

      MDEV-29959 has changed UUID storage format in 10.11.5. The server auto-detects the correct UUID storage format automatically based on the version of the server that has created the table, so upgrades work seamlessly.

      But REPAIR TABLE (and CHECK TABLE ?) updates the server version in the frm without rewriting the data, that is, it creates a new frm for old UUIDs. After that MariaDB can no longer read UUIDs correctly.

      The fix could be to make the server aware of the UUID format change. Some type handler method used in ha_check_for_upgrade() or likely in check_old_types() that tells the server to rebuild the table. Ideally it could do VARCHAR and DECIMAL (and timestamps in MDEV-32188) upgrade checks too.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 7.5h
                  2d 7.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.